# rzd_project

./: .gitignore  README.md  app.db  pyproject.toml
app/: auth.py  deps.py  main.py  permissions.py  run.py  settings.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  accidents.py  bridge.py  embankment.py  item.py  object.py  pipeline.py  powerline.py  user.py
app/repositories/: __init__.py  accident_repository.py  base_repository.py  object_repository.py  search_repository.py  user_repository.py
app/routers/: accidents.py  bridges.py  embankments.py  items.py  pipelines.py  powerlines.py  search.py  users.py
app/schemas/: accidents.py  bridge.py  embankment.py  geo.py  item.py  pipeline.py  powerline.py  search.py  user.py
app/services/: accident_service.py  mappers.py  object_service.py  search_service.py  seed.py  snils.py  user_service.py
