[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["dersar <vanya20061482@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = "^2.0.43"
pydantic-settings = "^2.11.0"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "app.run:main"